<?xml version="1.0" encoding="utf-8"?>
<io.codetail.widget.RevealFrameLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content">
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25dp"
            android:layout_margin="8dp"
            android:fontFamily="@font/aleo"
            android:gravity="center"
            android:id="@+id/page_user_title"
            android:text="@string/user_data_title"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/page_user_title"
            android:id="@+id/section_title_data">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/user_name_part"
                android:fontFamily="@font/aleo"
                android:layout_centerHorizontal="true"
                android:id="@+id/title_data_part"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/niceGray"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/title_data_part" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/niceGray"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/title_data_part"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/section_title_data"
            android:id="@+id/section_data">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/section_text"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/section_logo">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:fontFamily="@font/aleo"
                    android:textSize="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:text="@string/imie"
                    android:id="@+id/name_title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:fontFamily="@font/aleo"
                    android:textSize="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:id="@+id/name_body"
                    android:layout_toRightOf="@+id/name_title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name_title"
                    android:id="@+id/surname_title"
                    android:layout_alignParentLeft="true"
                    android:fontFamily="@font/aleo"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/nazwisko"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name_title"
                    android:fontFamily="@font/aleo"
                    android:textSize="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:id="@+id/surname_body"
                    android:layout_toRightOf="@+id/surname_title"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/surname_title"
                    android:id="@+id/email_title"
                    android:layout_alignParentLeft="true"
                    android:fontFamily="@font/aleo"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/mail"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/surname_title"
                    android:fontFamily="@font/aleo"
                    android:textSize="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:id="@+id/email_body"
                    android:layout_toRightOf="@+id/email_title"/>
                <!--<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email_title"
                    android:id="@+id/karnet_title"
                    android:layout_alignParentLeft="true"
                    android:fontFamily="@font/aleo"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:textSize="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/karnet"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email_title"
                    android:fontFamily="@font/aleo"
                    android:textSize="10dp"
                    android:text="Jednorazowy"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:id="@+id/karnet_body"
                    android:layout_toRightOf="@+id/karnet_title"/> -->



            </RelativeLayout>
            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/section_logo"
                android:layout_marginStart="5dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logo"
                    android:scaleType="fitCenter"/>

            </RelativeLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/section_data"
            android:id="@+id/section_canceled">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/user_canceled_classes"
                android:fontFamily="@font/aleo"
                android:layout_centerHorizontal="true"
                android:id="@+id/title_canceled_classes"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/niceGray"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/title_canceled_classes" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/niceGray"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/title_canceled_classes"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <ListView
            android:id="@+id/list_canceled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/section_canceled" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_canceled"
            android:id="@+id/section_next">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/user_next_classes"
                android:fontFamily="@font/aleo"
                android:layout_centerHorizontal="true"
                android:id="@+id/title_next_classes"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/niceGray"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/title_next_classes" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/niceGray"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/title_next_classes"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/section_next"
            android:layout_marginLeft="10dp"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true"
            android:id="@+id/next_class_body"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/next_class_name"
                    android:layout_alignParentTop="true"
                    android:fontFamily="@font/aleo"
                    android:textSize="15dp"
                    android:textColor="@color/colorHell"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/next_class_time"
                    android:layout_below="@+id/next_class_name"
                    android:fontFamily="@font/aleo"
                    android:textSize="10dp"
                    android:layout_marginTop="3dp"
                    android:layout_marginBottom="3dp"
                    android:layout_centerHorizontal="true"/>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/next_class_body"
            android:id="@+id/section_groups">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:text="@string/user_groups_part"
                android:fontFamily="@font/aleo"
                android:layout_centerHorizontal="true"
                android:id="@+id/title_groups"/>
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/niceGray"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/title_groups" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/niceGray"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/title_groups"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <ListView
            android:id="@+id/list_groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@+id/section_groups" />

    </RelativeLayout>

</ScrollView>

</io.codetail.widget.RevealFrameLayout>